--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.0.0",
     "angular-in-memory-web-api": "^0.5.2",
     "core-js": "^2.4.1",
+    "ngx-cookie-service": "^1.0.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
